# bevy-egui-notify

./: Cargo.toml
src/: bevy_plugin.rs  lib.rs  toast.rs
