[package]
name = "bevy-egui-notify"
version = "0.21.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/soraxas/bevy-egui-notify"
description = "Simple notifications library for EGUI, in the bevy system"
authors = ["ItsEthra", "soraxas"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
# egui = { version = "0.29", default-features = false }
bevy_egui = { version = "0.38.0", default-features = false }
bevy = { version = "0.17", default-features = false, features = ["x11"] }

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui-phosphor = { git = "https://github.com/ItsEthra/egui-phosphor.git", branch = "egui-0.33" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = 0 }
unwrap_used = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
enum_glob_use = { level = "deny", priority = 2 }
